--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,12 +1,11 @@
 <!-- Sidebar -->
 <div id="sidebar">
     <!-- Logo -->
-    <div id="logo"><h1><a href="/">pjf</a></h1></div>
+    <div id="logo"><h1><a href="/">won ton</a></h1></div>
 
     <section class="find_me">
-        <a href="http://twitter.com/pjf"><i class="fa fa-twitter-square  fa-3x"  ></i></a>
-        <a href="http://facebook.com/paul.fenwick"><i class="fa fa-facebook-square fa-3x"  ></i></a>
-        <a href="http://github.com/pjf"><i class="fa fa-github-square   fa-3x"  ></i></a>
+        <a href="http://twitter.com/angeftw"><i class="fa fa-twitter-square  fa-3x"  ></i></a>
+        <a href="https://www.facebook.com/misohornet"><i class="fa fa-facebook-square fa-3x"  ></i></a>
     </section>
 
     <!-- Nav -->
@@ -14,9 +13,9 @@
         <ul>
             <!-- <li class="current_page_item"><a href="/"></a></li> -->
             <li><a href="/">Latest Post</a></li>
-            <li><a href="/talks">My Talks</a></li>
-            <li><a href="/DF">Dwarf Fortress</a></li>
-            <li><a href="/advogato">Older Posts</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/Mars">Real Estate</a></li>
+            <li><a href="http://stuficionado.net/">Stuff</a></li>
+            <li><a href="https://www.google.com.au/search?q=food&tbm=isch">Porn</a></li>
         </ul>
     </nav>
 
@@ -131,7 +130,7 @@
     <!-- Copyright -->
     <div id="copyright">
         <p>
-            &copy; 2014 Paul Fenwick<br />
+            &copy; 2014 Ange Chin<br />
             Design: <a href="http://html5up.net/">HTML5 UP</a>
         </p>
     </div>
