Remove tip pbox

--- a/_includes/tip-box.html
+++ b/_includes/tip-box.html
@@ -1,3 +1,5 @@
+{% comment %}
+
 <div class="tip-box">
     <p>
         <a href="http://gittip.com/pjf"><i class="fa fa-gittip fa-3x pull-left"></i></a>
@@ -8,3 +10,5 @@
         please <a href="http://bit.ly/1kDuLaS">tip me on gittip</a>.
     </p>
 </div>
+
+{% endcomment %}
