--- a/_includes/tip-box.html
+++ b/_includes/tip-box.html
@@ -1,14 +1,10 @@
-{% comment %}
-
 <div class="tip-box">
     <p>
         <a href="http://gittip.com/pjf"><i class="fa fa-gittip fa-3x pull-left"></i></a>
-        This content is available for you to use for free,
+        This content (except images) is available for you to use for free,
         even commercially, under a <a href="https://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 license</a>.
     </p><p>
-        If you wish to support my work,
-        please <a href="http://bit.ly/1kDuLaS">tip me on gittip</a>.
+        If you wish to support my trolling,
+        please <a href="http://bit.ly/1kDuLaS">tip pjf on gittip</a>.
     </p>
 </div>
-
-{% endcomment %}
